# sol-tictactoe

./: .gitignore  .hintrc  Dockerfile  README.md  anchor.toml  package-lock.json  package.json  render.yaml  vercel.admin.json  vercel.json  vercel.web.json
apps/admin/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/admin/src/: bootstrap.tsx  main.tsx  vite-env.d.ts
apps/server/: admin-platforms.example.json  admin-platforms.json  package.json
apps/server/scripts/: init-escrow.ts  sync-escrow-settings.mjs
apps/server/src/: admin-routes.ts  config.ts  (+26 more)
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
docs/: ANCHOR_AUDIT.md  CUSTOM_DOMAINS.md  DEVNET_E2E.md  ECONOMICS.md  GO_LIVE_CHECKLIST.md  LAUNCH_PLAN.md  MAINNET_DEPLOY.md  PROJECT_MAP.md  RENDER_DEPLOY.md  SECRETS_CHECKLIST.md  SECURITY.md  VERCEL_DEPLOY.md  render.production.env.example  secrets.local.env.example  vercel.production.env.example
programs/match-escrow/: Cargo.toml
programs/match-escrow/src/: lib.rs
scripts/: admin-base-path.mjs  build-vercel-combined.mjs  check-fee-recipient.mjs  devnet-build.sh  devnet-deploy.sh  devnet-retry-deploy.sh  ensure-https-url.mjs  fetch-chess-models.mjs  launch-deploy.mjs  mobile-audit-browser.mjs  print-google-oauth-origins.mjs  render-create-checkers-api.mjs  render-deploy-status.mjs  render-deploy.mjs  render-provision.mjs  run-mobile-audit.mjs  set-google-oauth.mjs  smoke-escrow-mainnet.mjs  smoke-escrow.mjs  sync-program-id.mjs  vercel-enable-insights.mjs  wsl-redeploy.sh
(+218 files in other folders)
