[package]
name = "match-escrow"
version = "0.1.0"
description = "SOL TTT match escrow with house rake"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "match_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated_token"] }
